changes:pulled from main

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm install
 
       - name: Build TypeScript
-        run: npm run build
+        run: npm run build:ts
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.10
