--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -3,36 +3,96 @@ name: Deploy to EC2
 on:
   push:
     branches:
-      - main # change if needed
+      - main
+
+env:
+  APP_NAME: backend-app
+  DEPLOY_PATH: /var/www/backend-app
+  NODE_VERSION: 18
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      # 1️⃣ Checkout repository
+      - name: Checkout source
         uses: actions/checkout@v3
 
+      # 2️⃣ Setup Node with cache
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: ${{ env.NODE_VERSION }}
+          cache: "npm"
 
+      # 3️⃣ Install dependencies (clean)
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
-      - name: Build TypeScript
+      # 4️⃣ Run tests (optional but recommended)
+      - name: Run tests
+        run: npm test || echo "No tests found"
+
+      # 5️⃣ Build TypeScript
+      - name: Build application
         run: npm run build:ts
 
-      - name: Deploy to EC2
+      # 6️⃣ Verify dist exists
+      - name: Verify build output
+        run: |
+          if [ ! -d "dist" ]; then
+            echo "Build failed: dist folder not found"
+            exit 1
+          fi
+
+      # 7️⃣ Create deployment archive
+      - name: Create deployment package
+        run: |
+          tar -czf deploy.tar.gz \
+            dist \
+            package.json \
+            package-lock.json \
+            ecosystem.config.js
+
+      # 8️⃣ Upload archive to EC2
+      - name: Upload to EC2
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          source: "deploy.tar.gz"
+          target: "/tmp"
+
+      # 9️⃣ Deploy on EC2
+      - name: Deploy via SSH
         uses: appleboy/ssh-action@v0.1.10
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            cd your-repo
-            git pull origin main
-            npm install --production
-            npm run build:ts
-            pm2 restart backend-app
+            set -e
+
+            echo "Starting deployment..."
+
+            mkdir -p ${{ env.DEPLOY_PATH }}
+            cd ${{ env.DEPLOY_PATH }}
+
+            # Remove old build
+            rm -rf dist
+
+            # Extract new build
+            tar -xzf /tmp/deploy.tar.gz
+            rm /tmp/deploy.tar.gz
+
+            # Install production dependencies only
+            npm ci --omit=dev
+
+            # Reload app (zero downtime)
+            pm2 reload ecosystem.config.js || pm2 start ecosystem.config.js
+
+            pm2 save
+
+            echo "Deployment completed successfully"
