--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -53,7 +53,7 @@ jobs:
             dist \
             package.json \
             package-lock.json \
-            ecosystem.config.js
+            ecosystem.config.json
 
       # 8️⃣ Upload archive to EC2
       - name: Upload to EC2
@@ -91,7 +91,7 @@ jobs:
             npm ci --omit=dev
 
             # Reload app (zero downtime)
-            pm2 reload ecosystem.config.js || pm2 start ecosystem.config.js
+            pm2 reload ecosystem.config.json || pm2 start ecosystem.config.json
 
             pm2 save
 
