added port default

--- a/ecosystem.config.json
+++ b/ecosystem.config.json
@@ -6,7 +6,8 @@
       "instances": 1,
       "exec_mode": "fork",
       "env": {
-        "NODE_ENV": "production"
+        "NODE_ENV": "production",
+        "PORT": 3000
       }
     }
   ]
